Fix comments preview paragraph spacing

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -333,18 +333,24 @@ a.header-link {
       width: calc(100% - 80px);
       margin: 19px auto 8px;
       border: 1px solid #dbdbdb;
+      line-height: 2em;
+
       p.loading-message {
         opacity: 0.6;
       }
+
       pre {
         overflow-x: auto;
       }
+
       kbd {
         @extend %kbd;
       }
+
       code {
         word-wrap: break-word;
       }
+
       .article-body-image-wrapper img {
         max-width: 100%;
       }
